--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,29 @@
 body {
-  font-family: 'Arial';
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 16px;
+}
+
+main {
+  margin: 0 auto;
+  width: 640px;
+}
+
+section {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+button {
+  cursor: pointer;
+}
+
+#loginForm input {
+  width: 200px;
+}
+
+.hide {
+  display: none;
 }
 
 #status-wrapper {
@@ -7,33 +31,8 @@ body {
   align-items: center;
 }
 
-.page-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.page-wrapper video {
-  min-width: 300px;
-  max-width: 700px;
-}
-
-.btn {
-  padding: 8px 20px;
-  border: none;
-  cursor: pointer;
-}
-
 .btn:disabled {
   cursor: unset;
-}
-
-.btn--red {
-  background-color: red;
-}
-
-.btn--green {
-  background-color: green;
 }
 
 .recording-light {
