--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ button {
 }
 
 .hide {
-  display: none;
+  display: none !important;
 }
 
 #status-wrapper {
@@ -49,7 +49,7 @@ button {
   border-radius: 50%;
 }
 
-.blinking-button {
+.blinking-light {
   background-color: rgb(212, 0, 0);
   font-weight: bold;
   animation: blinkingAnimation 1s infinite;
