--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,8 @@ body {
   margin: 16px;
 }
 
-main {
+main,
+header {
   margin: 0 auto;
   width: 640px;
 }
@@ -16,6 +17,16 @@ section {
 
 button {
   cursor: pointer;
+}
+
+h1 {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: 500;
 }
 
 #loginForm input {
@@ -33,6 +44,59 @@ button {
 
 .btn:disabled {
   cursor: unset;
+}
+
+#video-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+#captions-container {
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 140px;
+  width: 100%;
+  z-index: 99;
+}
+
+#captions {
+  width: 80%;
+  position: absolute;
+  z-index: 99;
+  bottom: 20%;
+  left: 50%;
+  color: yellow;
+  font-size: 20px;
+  font-weight: 800;
+  transform: translate(-50%);
+  -webkit-text-stroke: 1px black;
+}
+
+#btn-fullscrean {
+  position: absolute;
+  z-index: 999;
+  right: 8px;
+  bottom: 8px;
+}
+
+#btn-play,
+#btn-stop {
+  position: absolute;
+  z-index: 999;
+  left: 8px;
+  bottom: 8px;
+}
+
+#btn-fullscrean svg,
+#btn-play svg,
+#btn-stop svg {
+  fill: white;
+  width: 54px;
+}
+
+#btn-fullscrean:focus {
+  outline: none;
 }
 
 .recording-light {
@@ -66,5 +130,13 @@ button {
 
   100% {
     background-color: rgb(212, 0, 0);
+  }
+}
+
+@media all and (display-mode: fullscreen) {
+  /* CSS styles to be applied or altered in fullscreen mode */
+  #video {
+    width: 100%;
+    height: 100%;
   }
 }
